--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -198,7 +198,7 @@ div:nth-of-type(1) > .list > .roomState .star {
   color: gold;
 }
 
-.roomState.publicLibraryGame .star, .roomState.linkedGame > i {
+.roomState.publicLibraryGame .star, .roomState.uploading > i, .roomState.linkedGame > i {
   display: block;
 }
 
