Make it so material icons work in the JSON editor top buttons

--- a/client/css/jsonedit.css
+++ b/client/css/jsonedit.css
@@ -426,7 +426,7 @@ body.jsonEdit.jeZoomOut #topSurface {
   vertical-align: top;
 }
 
-[id=jeTopButtons] button.material {
+[id=jeTopButtons] button.material-icons {
   font-family: 'Material Icons';
 }
 
