--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -101,16 +101,22 @@
   display: inline-block;
   padding: 0 0 10px 10px;
 }
-#statesList > div{
+#statesList > div {
   position: relative;
 }
+#statesList > div.empty {
+  display: none;
+}
 
-#addState {
+#statesOverlay .buttons {
   position: sticky;
   top: 10px;
   float: right;
   z-index: 3;
   margin: -60px 10px 0 0;
+}
+#statesOverlay .buttons > button {
+  display: inline-flex;
 }
 
 #emptyLibrary {
@@ -197,11 +203,11 @@
   padding: 9px;
 }
 
-div:nth-of-type(1) > .list > .roomState .star {
+div:nth-of-type(2) > .list > .roomState .star {
   color: gold;
 }
 
-.roomState.publicLibraryGame .star, .roomState.uploading > i.linked, .roomState.linkedGame > i.linked {
+.roomState.publicLibraryGame .star, .roomState.uploading > i.linked, .roomState.savedGame > i.linked, .roomState.linkedGame > i.linked {
   display: block;
 }
 
@@ -229,14 +235,14 @@ div:nth-of-type(1) > .list > .roomState .star {
 }
 
 
-@media (max-width: 420px), (max-height: 262px) {
+@media (max-width: 460px), (max-height: 287px) {
   #statesOverlay h2.title {
     position: unset;
     margin:  0 !important;
     padding: 0 !important;
     clear: both;
   }
-  #addState {
+  #statesOverlay .buttons {
     position: unset;
     margin-top: 4px;
     margin: 4px;
