Allow customizing a cursor's active duration.

--- a/client/css/overlays/players.css
+++ b/client/css/overlays/players.css
@@ -160,6 +160,7 @@ label.ui-line::before{
   --cursorOpacity: 0;
   --cursorActiveOpacity: 0.3;
   --cursorPressedOpacity: 0.3;
+  --cursorActiveDuration: 100; /* milliseconds */
 }
 .cursor {
   position: absolute;
