Optimize rendering of large piles by hiding deep cards
Large piles can slow down the game quite a bit as the browser tries to
draw all of the obscured piles. This optimizes large piles by hiding
every card after the nth.

The performance can be compared to:
https://virtualtabletop.io/oq8o

--- a/client/css/widgets/pile.css
+++ b/client/css/widgets/pile.css
@@ -2,6 +2,10 @@
   will-change: transform;
 }
 
+.pile > :not(.visible-in-pile):not(.handle) {
+  display: none;
+}
+
 .pile .handle {
   position: absolute;
   left: var(--phPosition);
