only show options in the filter dropdowns that yield results

--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -59,6 +59,10 @@
   border-bottom: 1px solid var(--VTTblue);
 }
 
+#stateFilters select option.noMatch {
+  display: none;
+}
+
 #stateFilters select, #stateFilters input {
   margin: 0 5px;
 }
