--- a/client/css/jsonedit.css
+++ b/client/css/jsonedit.css
@@ -430,7 +430,19 @@ body.jsonEdit.jeZoomOut #topSurface {
 [id=jeTopButtons] button.onState {
   color: yellow
 }
-
+#je_toggleHighlight.onState {
+  position: relative;
+}
+#je_toggleHighlight.onState::before {
+  position: absolute;
+  height: 22px;
+  width: 17px;
+  content: '';
+  top: 1px;
+  left: 4px;
+  border: 2px solid yellow;
+  border-radius: 20%;
+}
 
 #jeCommands .context{
   font-weight: bold;
