--- a/client/css/widgets/scoreboard.css
+++ b/client/css/widgets/scoreboard.css
@@ -9,30 +9,32 @@
 }
 
 .scoreboard table {
+  border:  2px solid #333;
   border-collapse: collapse;
 }
 
 .scoreboard th {
   color: black;
-  border-bottom: 1px solid black;
-  border-top: 1px solid black;
+  background-color: rgb(203, 220, 233);
+  border-bottom: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  padding: 5px;
+  text-shadow: 1px 1px 1px #fff;
+  white-space: nowrap;
 }
 
-.scoreboard td {
-  color: var(--VTTblueDark);
-}
-
-.scoreboard th, .scoreboard td {
-  border-left: 1px solid black;
-  border-right: 1px solid black;
-  border-collapse: collapse;
-  padding-left: 10px;
-  padding-right: 10px;
+.scoreboard tbody td {
+  border-bottom: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  color: #333;
+  padding: 5px;
+  text-shadow: 1px 1px 1px #fff;
   text-align: right;
+  white-space: nowrap;
 }
 
 .scoreboard .totalsLine {
   border-bottom: 1px solid black;
-  border-top: 1px solid black;
+  border-top: 1px solid #ddd;
 }
 
