--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -856,6 +856,56 @@ div:nth-of-type(2) > .list > .roomState .star {
 
 
 
+/* shareLinkOverlay */
+
+#shareLinkOverlay {
+  justify-content: center;
+}
+
+#shareLinkOverlay h1 {
+  margin-top: 0;
+}
+
+#shareLinkOverlay > button {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+#shareLinkOverlay input {
+  width: 100%;
+  box-sizing: border-box;
+}
+
+#shareLinkOverlay > div > div {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+@media (max-width: 800px), (max-height: 500px) {
+  #shareLinkOverlay {
+    justify-content: unset;
+  }
+}
+
+@media (max-width: 400px), (max-height: 250px) {
+  #shareLinkOverlay {
+    padding: 0;
+  }
+  #shareLinkOverlay > h1 {
+    text-align: left;
+    margin: 10px 50px 10px 5px;
+  }
+  #shareLinkOverlay > div > div {
+    padding: 5px;
+    border-radius: 10px;
+  }
+}
+
+
+
+
+
 /* updateImageOverlay */
 
 #updateImageOverlay > h1 {
