--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -747,56 +747,56 @@ div:nth-of-type(2) > .list > .roomState .star {
 
 
 
-/* stateAddOverlay */
+/* stateAddOverlay, variantAddOverlay */
 
-#stateAddOverlay {
+#stateAddOverlay, #variantAddOverlay {
   padding: 0;
 }
-#stateAddOverlay > h1 {
+#stateAddOverlay > h1, #variantAddOverlay > h1 {
   margin: 20px 0 0 0;
 }
-#stateAddOverlay > button {
+#stateAddOverlay > button, #variantAddOverlay > button {
   position: absolute;
   right: 10px;
   top: 10px;
 }
-#stateAddOverlay input {
+#stateAddOverlay input, #variantAddOverlay select {
   width: 100%;
   box-sizing: border-box;
 }
-#stateAddOverlay > div {
+#stateAddOverlay > div, #variantAddOverlay > div {
   display: grid;
   gap: 20px;
   padding: 20px;
 }
-#stateAddOverlay > div > div:nth-of-type(1) {
+#stateAddOverlay > div > div:nth-of-type(1), #variantAddOverlay > div > div:nth-of-type(1) {
   grid-column: 1 / span 2;
 }
 @media (min-width: 1300px), (min-height: 875px) {
-  #stateAddOverlay > div {
+  #stateAddOverlay > div, #variantAddOverlay > div {
     margin: 5% 10% 0 10%;
   }
 }
 @media (min-width: 1900px), (min-height: 1187px) {
-  #stateAddOverlay > div {
+  #stateAddOverlay > div, #variantAddOverlay > div {
     margin: 5% 20% 0 20%;
   }
 }
 @media (max-width: 600px), (max-height: 375px) {
-  #stateAddOverlay > div > div:nth-of-type(1) {
+  #stateAddOverlay > div > div:nth-of-type(1), #variantAddOverlay > div > div:nth-of-type(1) {
     grid-column: unset;
   }
 }
 @media (max-width: 300px), (max-height: 187px) {
-  #stateAddOverlay > h1 {
+#stateAddOverlay > h1, #variantAddOverlay > h1 {
     text-align: left;
-    margin: 10px 5px;
+    margin: 10px 50px 10px 5px;
   }
-  #stateAddOverlay > div {
+  #stateAddOverlay > div, #variantAddOverlay > div {
     gap: 10px;
     padding: 0;
   }
-  #stateAddOverlay > div > div {
+  #stateAddOverlay > div > div, #variantAddOverlay > div > div {
     padding: 5px;
     border-radius: 10px;
   }
