Change debug output to be a button. (#1374)
* Change debug output to be a button.

* Fix that tree opened completely

* Change color and text for new buttons.

* Move debug toggle into a command button.

* Now we change button color to yellow when it is "active".

Also now uses a more general way to insert classes into the command text.

Also I moved the top buttons to the top of the command list.

* Change highlighting for toggleHighlight button

* Fix comment, change material icon processing back to how it was.

Co-authored-by: 96LawDawg <76912527+96LawDawg@users.noreply.github.com>

--- a/client/css/jsonedit.css
+++ b/client/css/jsonedit.css
@@ -15,7 +15,7 @@
   --editorPaneWidth: 602px;
 }
 
-#jsonEditor.notHighEnough #jeWidgetLayers, #jsonEditor.notHighEnough #jeLogWrapper {
+#jsonEditor.notHighEnough #jeWidgetLayers, #jsonEditor.notHighEnough #jeLogWrapper, .jeLogNested {
   display: none;
 }
 
@@ -318,16 +318,7 @@ body.jsonEdit.jeZoomOut #topSurface {
   margin: 0;
 }
 
-#jeLogWrapper:hover #jeLog {
-  display: block;
-}
-
-#jeLogWrapper:hover > h1, .jeLogNested {
-  display: none;
-}
-
-/* Show the nested list when the user clicks on the caret/arrow */
-.jeLogNested.active {
+#jeLog.active {
   display: block;
 }
 
@@ -435,6 +426,24 @@ body.jsonEdit.jeZoomOut #topSurface {
   opacity: 0.5;
 }
 
+/* For the zoom, edit, wide, highlight, and debug "on" states */
+[id=jeTopButtons] button.onState {
+  color: yellow
+}
+#je_toggleHighlight.onState {
+  position: relative;
+}
+#je_toggleHighlight.onState::before {
+  position: absolute;
+  height: 22px;
+  width: 17px;
+  content: '';
+  top: 1px;
+  left: 4px;
+  border: 2px solid yellow;
+  border-radius: 20%;
+}
+
 #jeCommands .context{
   font-weight: bold;
   margin-top: 8px;
@@ -454,22 +463,25 @@ body.jsonEdit.jeZoomOut #topSurface {
 }
 #je_showWidget{
 }
-#je_tree{
+#je_reverseFkeys{
 }
 #je_addNewWidget{
   color: rgb(95, 167, 95);
 }
-#je_duplicateWidget{
-  color: yellow;
-}
 #je_removeWidget{
   color: rgb(255, 73, 73);
+}
+#je_duplicateWidget{
 }
 #je_editMode{
 }
 #je_openParent{
 }
 #je_toggleWide{
+}
+#je_toggleHighlight{
+}
+#je_toggleDebug{
 }
 
 #jeCommands > button::before{
