fixed that "Add to public library" button was gone

--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -325,7 +325,7 @@ div:nth-of-type(2) > .list > .roomState .star {
   width: 100%;
 }
 
-#stateDetailsOverlay.uploading > .buttons [icon=save], #stateDetailsOverlay:not(.uploading) > .buttons [icon=upload] {
+#stateDetailsOverlay.uploading > .buttons [icon=save], #stateDetailsOverlay:not(.uploading) > .buttons > [icon=upload] {
   display: none;
 }
 
