--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -592,8 +592,8 @@ div:nth-of-type(2) > .list > .roomState .star {
   color: var(--VTTblue);
 }
 
-#stateScreenshot {
-  width: 100%;
+#helpTexts h4 {
+  font-size: 18px;
 }
 
 @media (max-width: 1260px), (max-height: 787px) {
