--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -225,6 +225,10 @@
   text-shadow: 1px 1px 2px #444;
 }
 
+.roomState .star::before {
+  font-size: 32px;
+}
+
 .roomState > i {
   color: white;
   padding: 9px;
@@ -412,6 +416,9 @@ div:nth-of-type(2) > .list > .roomState .star {
   background: none;
   text-shadow: 2px 2px 4px #444;
 }
+#mainDetails .star::before {
+  font-size: 50px;
+}
 #mainDetails #mainImage > i {
   top: unset;
   color: white;
@@ -423,8 +430,8 @@ div:nth-of-type(2) > .list > .roomState .star {
 #mainImage span {
   position: absolute;
   font-size: 16px;
-  top: 53px;
-  width: 68px;
+  top: 51px;
+  width: 62px;
   text-align: center;
   color: white;
   font-weight: bold;
@@ -725,7 +732,7 @@ div:nth-of-type(2) > .list > .roomState .star {
     margin: unset;
     padding: unset;
   }
-  #mainDetails .star, #mainDetails #mainImage > i {
+  #mainDetails .star::before, #mainDetails #mainImage > i {
     font-size: 32px;
   }
   #mainImage button, #similarImage button {
