--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -68,8 +68,35 @@
   margin: 0 5px;
 }
 
-#filterOverflow {
+#filterOverflow.empty, #filterOverflow:not(.active) > div {
   display: none;
+}
+
+#filterOverflow > button {
+  padding: 0;
+  margin: 0;
+  margin-left: 5px;
+}
+
+#filterOverflow > button::before {
+  font-size: 22px;
+}
+
+#filterOverflow > div {
+  position: absolute;
+  right: 10px;
+  margin-top: 5px;
+  z-index: 5;
+  background: #fff;
+  padding: 20px;
+  padding-bottom: 8px;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+#filterOverflow span {
+  display: block;
+  margin-bottom: 12px;
 }
 
 #statesList {
@@ -286,6 +313,12 @@ div:nth-of-type(2) > .list > .roomState .star {
   }
 }
 @media (max-width: 320px), (max-height: 200px) {
+  #filterOverflow > div {
+    padding: 2px;
+  }
+  #filterOverflow span {
+    margin-bottom: 2px;
+  }
   #statesOverlay, .roomState, #emptyLibrary, #emptyLibraryByFilter {
     margin:  0;
     padding: 0;
