--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -298,7 +298,7 @@ div:nth-of-type(2) > .list > .roomState .star {
   #statesOverlay h2.title {
     position: unset;
     margin:  0 !important;
-    padding: 0 !important;
+    padding: 4px !important;
     clear: both;
   }
   #statesOverlay .buttons {
@@ -324,6 +324,9 @@ div:nth-of-type(2) > .list > .roomState .star {
   #statesOverlay, .roomState, #emptyLibrary, #emptyLibraryByFilter {
     margin:  0;
     padding: 0;
+  }
+  #emptyLibrary, #emptyLibraryByFilter {
+    margin: 4px;
   }
   #statesOverlay .list {
     display: block;
